--- a/home.css
+++ b/home.css
@@ -65,12 +65,12 @@ body {
     width: 230px;
 }
 
-.logol {
-    width: 100%;
-}
-
 .logos {
     display: none;
+}
+
+.blank {
+    height: 5vh;
 }
 
 .foot {
@@ -80,43 +80,28 @@ body {
     background: #999999;
 }
 
+.img4 {
+    display: flex;
+    justify-content: center;
+}
+
 img {
-	position: relative;
-    width: 640px;
-    left: 50%;
-    transform: translate(-50%);
+	display: flex;
+    width: 100%;
+    filter: saturate(0%);
 }
 
-button {
-    position: relative;
-    width: 640px;
-    left: 50%;
-    padding: 1.5rem;
-    transform: translate(-50%);
-    border: none;
-    font-size: 1.5rem;
-    font-weight: 400;
-    font-family: 'Noto Serif TC', serif;
+img:hover {
+    filter: saturate(100%);
 }
 
-button:hover {
-    background: #465AAA;
-    color: #FFFFFF;
-}
-
-#down {
-    width: 140px;
-    transform: translate(-320px);
-}
-
-#home {
-    width: 210px;
-    transform: translate(-318px);
-}
-
-#re {
-    width: 280px;
-    transform: translate(-316px);
+.slogan {
+    display: grid;
+    grid-template-columns:
+    repeat(2, 1fr);
+    grid-template-rows:
+    repeat(2, 1fr);
+    align-items: center;
 }
 
 h1 {
@@ -160,19 +145,7 @@ h2 {
     flex-direction: column;
 }
 
-#ham1 {
-    display: none;
-}
-#ham2 {
-    display: none;
-}
-#ham3 {
-    display: none;
-}
-#ham4 {
-    display: none;
-}
-#ham5 {
+#ham {
     display: none;
 }
 
@@ -187,170 +160,6 @@ h2 {
     width: 100%;
     font-size: 0.8rem;
     font-weight: 300;
-}
-
-@media(max-width: 640px) {
-    .head {
-        height: 40px;    
-    }
-    .nav {
-        display: none;
-    }
-    .ham {
-        display: flex;
-        padding-right: 1rem;
-        width: 40px;
-    }
-    #ham1:checked ~ .menu {
-        display: flex;
-        position: relative;
-        z-index: 1;
-        right: calc(100vw - 56px);
-        bottom: 5px;
-        width: max-content;
-        background: #999999;
-    }
-    #ham2:checked ~ .menu {
-        display: flex;
-        position: relative;
-        z-index: 1;
-        right: calc(100vw - 56px);
-        bottom: 5px;
-        width: max-content;
-        background: #999999;
-    }
-    #ham3:checked ~ .menu {
-        display: flex;
-        position: relative;
-        z-index: 1;
-        right: calc(100vw - 56px);
-        bottom: 5px;
-        width: max-content;
-        background: #999999;
-    }
-    #ham4:checked ~ .menu {
-        display: flex;
-        position: relative;
-        z-index: 1;
-        right: calc(100vw - 56px);
-        bottom: 5px;
-        width: max-content;
-        background: #999999;
-    }
-    #ham5:checked ~ .menu {
-        display: flex;
-        position: relative;
-        z-index: 1;
-        right: calc(100vw - 56px);
-        bottom: 5px;
-        width: max-content;
-        background: #999999;
-    }
-    li {
-        width: 100vw;
-    }
-    li > a {
-        display: flex;
-        justify-content: center;
-        padding-top: 0.5rem;
-        padding-bottom: 0.5rem;
-        text-decoration: none;
-        color: black;
-    }
-    .foot {
-        height: 40px;
-    }
-    h1 {
-        font-size: 0.8rem;
-    }
-    h2 {
-        font-size: 0.6rem;
-        font-weight: 100;
-    }
-    .copy {
-        font-size: 0.6rem;
-        font-weight: 300;
-    }
-	img {
-        width: 100%;
-	}
-    button {
-        width: 100%;
-        padding: 1rem;
-        font-size: 0.8rem;
-    }
-    #down {
-        width: 100%;
-        transform: translate(-50%);
-    }
-    #home {
-        width: 100%;
-        transform: translate(-50%);
-    }
-    #re {
-        width: 100%;
-        transform: translate(-50%);
-    }
-}
-
-@media(max-height: 540px) {
-    .head {
-        height: 40px;    
-    }
-    .logoa {
-        width: 115px;
-    }
-    .logol {
-        display: none;
-    }
-    .logos {
-        display: flex;
-        width: 115px;
-        height: 40px;
-    }
-    .foot {
-        height: 40px;
-    }
-    h3 {
-        font-size: 0.6rem;
-        font-weight: 300;
-    }
-	img {
-        width: 320px;
-	}
-    button {
-        width: 320px;
-        padding: 1rem;
-        font-size: 0.8rem;
-    }
-    #down {
-        display: block;
-        width: 320px;
-        transform: translate(-160px);
-    }
-    #home {
-        display: block;
-        width: 320px;
-        transform: translate(-160px);
-    }
-    #re {
-        display: block;
-        width: 320px;
-        transform: translate(-160px);
-    }
-    .ham0 {
-        width: 100%;
-    }
-}
-
-@media screen and (max-aspect-ratio: 1/2) and (min-height: 790px) {
-    .foot {
-        position: fixed;
-        bottom: 0;
-    }
-    #foot4 {
-        position: static;
-    }
 }
 
 @media screen and (max-aspect-ratio: 1/1) {
@@ -386,6 +195,54 @@ h2 {
     }
 }
 
+@media(max-width: 640px) {
+    .head {
+        height: 40px;    
+    }
+    .nav {
+        display: none;
+    }
+    .ham {
+        display: flex;
+        padding-right: 1rem;
+        width: 40px;
+    }
+    #ham:checked ~ .menu {
+        display: flex;
+        position: relative;
+        z-index: 1;
+        right: calc(100vw - 56px);
+        bottom: 5px;
+        width: max-content;
+        background: #999999;
+    }
+    li {
+        width: 100vw;
+    }
+    li > a {
+        display: flex;
+        justify-content: center;
+        padding-top: 0.5rem;
+        padding-bottom: 0.5rem;
+        text-decoration: none;
+        color: black;
+    }
+    .foot {
+        height: 40px;
+    }
+    h1 {
+        font-size: 0.8rem;
+    }
+    h2 {
+        font-size: 0.6rem;
+        font-weight: 100;
+    }
+    .copy {
+        font-size: 0.6rem;
+        font-weight: 300;
+    }
+}
+
 @media screen and (max-aspect-ratio: 1/2) and (max-width: 640px) {
     .foot {
         position: fixed;
@@ -398,4 +255,28 @@ h2 {
         display: flex;
         flex-direction: column;
     } 
+}
+
+@media(max-height: 540px) {
+    .head {
+        height: 40px;    
+    }
+    .logoa {
+        width: 115px;
+    }
+    .logol {
+        display: none;
+    }
+    .logos {
+        display: flex;
+        width: 115px;
+        height: 40px;
+    }
+    .foot {
+        height: 40px;
+    }
+    h3 {
+        font-size: 0.6rem;
+        font-weight: 300;
+    }
 }
